<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DisasterSafetyAlert</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="watch">Watch Area</string>
    <string name="what">What do I do?</string>
    <string name="settings">Settings</string>
    <string name="notify">Notify Family</string>
    <string name="checkFriends">Check on Your Friends</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_watch_area">WatchAreaActivity</string>
    <string name="safe">Safe</string>
    <string name="help">Help Me</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="ac">Add Contacts to Notify/Check</string>
     <string name="title_activity_smsreceiver">SMSReceiver</string>
    <string name="title_activity_respond">RespondActivity</string>
    
     <string name="disaster_feed">http://earthquake.usgs.gov/eqcenter/catalogs/1day-M2.5.xml</string>

</resources>
<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DisasterSafetyAlert</string>
    <string name="action_settings">Settings</string>
    <string name="history">History</string>
    <string name="watch">Watch Area</string>
    <string name="what">What do I do?</string>
    <string name="settings">Settings</string>
    <string name="notify">Notify Family</string>
    <string name="checkFriends">Check on Your Friends</string>
    <string name="title_activity_notify">NotifyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_watch_area">WatchAreaActivity</string>
    <string name="safe">Safe</string>
    <string name="help">Help Me</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="title_activity_people">PeopleActivity</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="ac">Add Contacts to Notify/Check</string>
    <string name="title_activity_smsreceiver">SMSReceiver</string>
    <string name="title_activity_respond">RespondActivity</string>

</resources>
