<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >
		 <Button
		     android:id="@+id/History"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/history"
		     android:onClick="selfDestruct" />
		 <Button
		     android:id="@+id/Notify"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/notify"
		     android:onClick="selfDestruct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >

		 <Button
		     android:id="@+id/WatchArea"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/watch"
		     android:onClick="selfDestruct" />
		 <Button
		     android:id="@+id/What"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/what"
		     android:onClick="selfDestruct" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:orientation="horizontal"
        android:layout_weight="1" >
		 <Button
		     android:id="@+id/CheckFriends"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/checkFriends"
		     android:onClick="selfDestruct" />
		  <Button
		     android:id="@+id/Settings"
		     android:layout_height="match_parent"
		     android:layout_width="0dip"
		     android:layout_weight="1"
		     android:text="@string/settings"
		     android:onClick="selfDestruct" />
    </LinearLayout>
</LinearLayout>
